[tool.poetry]
name = "insidegrid"
version = "0.1.0"
description = ""
authors = ["Illaria Samal <illaria.samal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
google-api-python-client = "^2.141.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
jinja2 = "^3.1.4"
itsdangerous = "^2.2.0"
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "insidegrid.main:start"
